Updates to angular toggle visibility directive to remove inline CSS for hide/show and fix missing aria-hidden attr on loaded state

--- a/app/assets/stylesheets/partials/modules/_centre-selector.scss
+++ b/app/assets/stylesheets/partials/modules/_centre-selector.scss
@@ -37,13 +37,16 @@
     }
   }
 }
-  
+
   /* Wrapper around the label and select */
   .centre-selector-control {
     @include respond-max($palm) {
-      display: none;
       float: left;
       width: 80%;
+    }
+
+    @include respond-min($non-palm) {
+      .centre-selector & {display: block;}
     }
 
     @include font-size($font-size-sml);
